one by one copying from linkedvariables into analyzer